--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-i18next": "^15.6.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "resend": "^4.7.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
