--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "geist": "^1.3.1",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-i18next": "^15.4.2",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "9.8.0",
